Web: Fix Monaco popups getting cut off

--- a/Clients/Xamarin.Interactive.Client.Web/ClientApp/css/site.css
+++ b/Clients/Xamarin.Interactive.Client.Web/ClientApp/css/site.css
@@ -67,7 +67,6 @@
 
 .public-DraftEditor-content {
     height: 100vh;
-    overflow: auto;
 }
 
 .spinner {
